SeatsAllocatio and Documentation file

--- a/FrontEnd/campus-management/public/index.html
+++ b/FrontEnd/campus-management/public/index.html
@@ -15,10 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Material+Icons"
     />
 
-    <link
-      href="https://cdn.quilljs.com/1.2.6/quill.snow.css"
-      rel="stylesheet"
-    />
+    <link href="resources/quill.snow.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
